put everything in /public

--- a/public/example.html
+++ b/public/example.html
@@ -309,7 +309,7 @@
         async function loadGameData() {
             try {
                 const timestamp = Date.now();
-                const response = await fetch(`https://blog.njdevils.red/current.json?t=${timestamp}`);
+                const response = await fetch(`./current.json?t=${timestamp}`);
                 
                 if (!response.ok) {
                     throw new Error(`HTTP ${response.status}: ${response.statusText}`);
